crates/parser/src/snapshots/parser__latex__tests__parse@include__biblatex_include_simple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/biblatex_include_simple.txt
---
ROOT@0..28
  PREAMBLE@0..28
    BIBLATEX_INCLUDE@0..28
      COMMAND_NAME@0..15 "\\addbibresource"
      CURLY_GROUP_WORD_LIST@15..28
        L_CURLY@15..16 "{"
        KEY@16..27
          WORD@16..27 "foo/bar.bib"
        R_CURLY@27..28 "}"

