crates/parser/src/snapshots/parser__latex__tests__parse@include__bibtex_include_simple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/bibtex_include_simple.txt
---
ROOT@0..22
  PREAMBLE@0..22
    BIBTEX_INCLUDE@0..22
      COMMAND_NAME@0..13 "\\bibliography"
      CURLY_GROUP_WORD_LIST@13..22
        L_CURLY@13..14 "{"
        KEY@14..21
          WORD@14..21 "foo/bar"
        R_CURLY@21..22 "}"

