crates/parser/src/snapshots/parser__latex__tests__parse@include__class_include_empty.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/class_include_empty.txt
---
ROOT@0..16
  PREAMBLE@0..16
    CLASS_INCLUDE@0..16
      COMMAND_NAME@0..14 "\\documentclass"
      CURLY_GROUP_WORD_LIST@14..16
        L_CURLY@14..15 "{"
        R_CURLY@15..16 "}"

