crates/parser/src/snapshots/parser__latex__tests__parse@include__import_incomplete.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/import_incomplete.txt
---
ROOT@0..11
  PREAMBLE@0..11
    IMPORT@0..11
      COMMAND_NAME@0..7 "\\import"
      CURLY_GROUP_WORD@7..11
        L_CURLY@7..8 "{"
        KEY@8..11
          WORD@8..11 "foo"

