crates/parser/src/snapshots/parser__latex__tests__parse@include__import_simple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/include/import_simple.txt
---
ROOT@0..17
  PREAMBLE@0..17
    IMPORT@0..17
      COMMAND_NAME@0..7 "\\import"
      CURLY_GROUP_WORD@7..12
        L_CURLY@7..8 "{"
        KEY@8..11
          WORD@8..11 "foo"
        R_CURLY@11..12 "}"
      CURLY_GROUP_WORD@12..17
        L_CURLY@12..13 "{"
        KEY@13..16
          WORD@13..16 "bar"
        R_CURLY@16..17 "}"

